# Power_Meter

./: CMakeLists.txt  partitions.csv  sdkconfig  功率计按键逻辑.iodraw-13.iodraw
components/porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c
main/: CMakeLists.txt  main.c
main/Beep/: Beep.c  Beep.h
main/I2c/: IIC.c  IIC.h
main/Ina226/: ina226.c  ina226.h
main/Key/: Key.c  Key.h
main/WIFI/: TCP.c  TCP.h  VOFA.c  VOFA.h
main/WS2812b/: WS2812b.c  WS2812b.h
main/ui/custom/: custom.c  custom.h
